fix header spacing for mobile

--- a/src/css/global/global.sass
+++ b/src/css/global/global.sass
@@ -125,6 +125,7 @@ body
     line-height: 4.3rem
     margin-bottom: 1.2rem
     font-weight: 700
+    margin-top: 2rem
 
   p
     text-align: center
