--- a/src/css/queries/queries.sass
+++ b/src/css/queries/queries.sass
@@ -6,7 +6,6 @@
 @media screen and (max-width: 900px)
   .header h1 
     font-size: 2.8rem
-    margin-top: 2rem
 
 
   .nav-menu 
